--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zttickets/common",
+  "name": "@zivoradt/common",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
