--- a/common/package.json
+++ b/common/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@zivoradt/common",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "./build/index.js",
   "types": "./buid/index.d.ts",
-  "files": ["build/**/*"],
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
-    "clean":"rimraf ./build/*",
-    "build": "npm run clean && tsc"
+    "clean": "rimraf ./build/*",
+    "build": "npm run clean && tsc",
+    "pub": "npm version patch && npm run build && npm publish"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +18,14 @@
   "devDependencies": {
     "del-cli": "^5.0.0",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
